Store config(1)'s root filesystem type as a text string rather than embedding the address of its xxx_mountroot() in swapnetbsd.c.  This permits booting of kernels with hard-wired filesystem type even if the filesystem is in a loadable module (ie, not linked into the kernel image).

Discussed on current-users.  Tested on amd64 and i386 with both hard-
wired and '?' filesystem times, and on both modular and monolithic
kernels.

Thanks to pooka@ for code review and suggestions.

Addresses my PR kern/40167