sys/kern/kern_subr.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: kern_subr.c,v 1.196 2008/11/27 21:36:51 christos Exp $	*/
+/*	$NetBSD: kern_subr.c,v 1.197 2008/12/19 17:11:57 pgoyette Exp $	*/
 
 /*-
  * Copyright (c) 1997, 1998, 1999, 2002, 2007, 2008 The NetBSD Foundation, Inc.
@@ -79,7 +79,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: kern_subr.c,v 1.196 2008/11/27 21:36:51 christos Exp $");
+__KERNEL_RCSID(0, "$NetBSD: kern_subr.c,v 1.197 2008/12/19 17:11:57 pgoyette Exp $");
 
 #include "opt_ddb.h"
 #include "opt_md.h"
@@ -785,8 +785,8 @@ setroot(struct device *bootdv, int bootpartition)
 	 * a DV_DISK boot device (or no boot device at all), then
 	 * find a reasonable network interface for "rootspec".
 	 */
-	vops = vfs_getopsbyname("nfs");
-	if (vops != NULL && vops->vfs_mountroot == mountroot &&
+	vops = vfs_getopsbyname(MOUNT_NFS);
+	if (vops != NULL && strcmp(rootfstype, MOUNT_NFS) == 0 &&
 	    rootspec == NULL &&
 	    (bootdv == NULL || device_class(bootdv) != DV_IFNET)) {
 		IFNET_FOREACH(ifp) {
@@ -897,12 +897,11 @@ setroot(struct device *bootdv, int bootpartition)
 		for (vops = LIST_FIRST(&vfs_list); vops != NULL;
 		     vops = LIST_NEXT(vops, vfs_list)) {
 			if (vops->vfs_mountroot != NULL &&
-			    vops->vfs_mountroot == mountroot)
+			    strcmp(rootfstype, vops->vfs_name) == 0)
 			break;
 		}
 
 		if (vops == NULL) {
-			mountroot = NULL;
 			deffsname = "generic";
 		} else
 			deffsname = vops->vfs_name;
@@ -910,8 +909,11 @@ setroot(struct device *bootdv, int bootpartition)
 		for (;;) {
 			printf("file system (default %s): ", deffsname);
 			len = cngetsn(buf, sizeof(buf));
-			if (len == 0)
+			if (len == 0) {
+				if (strcmp(deffsname, "generic") == 0)
+					rootfstype = ROOT_FSTYPE_ANY;
 				break;
+			}
 			if (len == 4 && strcmp(buf, "halt") == 0)
 				cpu_reboot(RB_HALT, NULL);
 			else if (len == 6 && strcmp(buf, "reboot") == 0)
@@ -922,7 +924,7 @@ setroot(struct device *bootdv, int bootpartition)
 			}
 #endif
 			else if (len == 7 && strcmp(buf, "generic") == 0) {
-				mountroot = NULL;
+				rootfstype = ROOT_FSTYPE_ANY;
 				break;
 			}
 			vops = vfs_getopsbyname(buf);
@@ -934,12 +936,20 @@ setroot(struct device *bootdv, int bootpartition)
 					if (vops->vfs_mountroot != NULL)
 						printf(" %s", vops->vfs_name);
 				}
+				if (vops != NULL)
+					vfs_delref(vops);
 #if defined(DDB)
 				printf(" ddb");
 #endif
 				printf(" halt reboot\n");
 			} else {
-				mountroot = vops->vfs_mountroot;
+				/*
+				 * XXX If *vops gets freed between here and
+				 * the call to mountroot(), rootfstype will
+				 * point to something unexpected.  But in
+				 * this case the system will fail anyway.
+				 */
+				rootfstype = vops->vfs_name;
 				vfs_delref(vops);
 				break;
 			}
